--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "antd": "^4.21.6",
         "classnames": "^2.3.1",
         "flickity": "^2.3.0",
         "react": "^17.0.2",
