--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "antd": "^4.21.6",
         "classnames": "^2.3.1",
         "flickity": "^2.3.0",
+        "gulp": "^4.0.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flickity-component": "^3.6.2",
